--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,22 @@
   padding:0px;
 }
 
-#octocat {
-  display: block;
-  width:384px;
-  margin: 50px auto;
+html {
+ width:100%;
+ height:100%;
+ margin:0;
+ padding:0;
+}
+
+body {
+ height:100%;
+ width:100%;
+ margin:0;
+ padding:0;
+ display:inline-flex;
+ align-content:center;
+ justify-content:center;
+ align-items:center;
 }
 
 p {
