--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:700&display=swap');
+
 * {
   margin:0px;
   padding:0px;
@@ -23,7 +25,6 @@ body {
 
 p {
   display: block;
-  width: 400px;
-  margin: 50px auto;
-  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+  font-size:2em;
+  font-family: 'Open Sans', sans-serif;
 }
